
	* goodness.cca: was not using correct weights. Broken in r992 (Sep
	6, 2009). 

	* vegdist: added UI for the alternative Gower index ("altGower")
	that skips double zeros. The C code has been in vegan since Oct 24
	(r1051), but no R interface. Together with decostand(..., "log")
	of r1052 this closes Feature Request #473 submitted by Etienne
	Laliberte in R-Forge.
	
Version 1.16-33 (closed December 13, 2009)

	* DESCRIPTION: Guillaume Blanchet added to the Authors. 

	* spandepth: New function to find the depths of nodes in a
	spanning tree from spantree() function. Per request of
	W. E. Sharp. 

	* bstick: refuses to analyse capscale() models with imaginary
	components because I have no idea how to do it. Reported by
	Richard Telford, Bergen (who probably wanted another
	solution...). 

	* predict.rda: works now with rank = 0 -- returns matrix of column
	means.  (Not yet done for predict.cca.)

	* simulate.rda: can now add permuted residuals to the fitted
	values. Experimental, low level interface that requires giving the
	index of right length. The permutation index can contain
	duplicates such as from sample(nrow(data), replace = TRUE) so that
	bootstrapping is possible unlike in anova.cca/permutest.cca. Works
	now with partial model: adds partial fit to the constrained fit.

	* simulate.cca: implemented by cloning simulate.rda. Function
	works with internal Chi-square standardized form and
	back-transforms the result by marginal totals and matrix grand
	total at the end. The marginal totals may still be negative. Not
	explicitly documented, and needs a connoisseur user. 
	
Version 1.16-32 (closed November 13, 2009)

	* alias.cca: gained argument 'names.only' (defaults FALSE) to only
	return the names of the aliased variables insted of their defining
	equations. 

	* rarefy: failed with one site and many sample sizes like
	rarefy(rpois(10, 2), sample=2:3).

	* msoplot: uses standard legend() to display info instead of hand