@@ -86,6 +86,10 @@ permutest.default <- function(x, ...)
         den[i] <- ca.ev
         F.perm[i] <- (cca.ev/q)/(ca.ev/r)
     }
+    ## Round to avoid arbitrary ordering of statistics due to
+    ## numerical inaccuracy
+    F.0 <- round(F.0, 12)
+    F.perm <- round(F.perm, 12)
     sol <- list(call = x$call, model = model, F.0 = F.0, F.perm = F.perm, 
                 chi = c(Chi.z, Chi.xz), num = num, den = den, df = c(q, 
                                                               r), nperm = permutations, method = x$method, first = first,  Random.seed = seed)
